tests/NormalTests/paczka1/small_fuzzy/95171699.err
Error in line 7: xQKlm6jG S481 41,6
Error in line 6: hr27T1GEam S481 24,4
Error in line 14: hr27T1GEam S863 29,5
